.provarCaches/00D410000011HE0EAM/objects/rstk__fcstmonth__c.object
<CustomObject>
    <description>fcstmonth__c; BOC</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__fcstmonth_days__c</fullName>
        <formula>(rstk__fcstmonth_month__r.rstk__fcstcal_lastday__c -  rstk__fcstmonth_month__r.rstk__fcstcal_firstday__c) + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of days in this Forecast Month (from the Forecast Calendar)</inlineHelpText>
        <label>Number of Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__fcstmonth_div__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>Consolidated Monthly Forecasts</relationshipLabel>
        <relationshipName>fcstmonths</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__fcstmonth_icitem__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Inventory Item</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipLabel>Consolidated Monthly Forecasts</relationshipLabel>
        <relationshipName>fcstmonths</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__fcstmonth_maxqty__c</fullName>
        <label>Max_Qty</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__fcstmonth_month__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Forecast Month</label>
        <referenceTo>rstk__fcstcal__c</referenceTo>
        <relationshipLabel>Consolidated Monthly Forecasts</relationshipLabel>
        <relationshipName>fcstmonths</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__fcstmonth_procseq__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Process Sequence</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__fcstmonth_qty__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Forecast Quantity</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__fcstmonth_tslqty__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Target Stocking Level</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__fcstmonth_div__r.rstk__sydiv_div__c +  rstk__fcstmonth_icitem__r.rstk__icitem_item__r.rstk__peitem_item__c +  TEXT(rstk__fcstmonth_month__r.rstk__fcstcal_year__c) +  TEXT(rstk__fcstmonth_month__r.rstk__fcstcal_month__c) + TEXT( rstk__fcstmonth_procseq__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__fcstmonth_icitem__r.rstk__icitem_item__r.rstk__peitem_item__c + &apos; (&apos; + TEXT(rstk__fcstmonth_month__r.rstk__fcstcal_year__c) + &apos;-&apos; + TEXT(rstk__fcstmonth_month__r.rstk__fcstcal_month__c) + &apos;) &apos; + TEXT( rstk__fcstmonth_procseq__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Consolidated Monthly Forecast</label>
    <listViews>
        <fullName>rstk__Monlhly_Forecasts</fullName>
        <columns>rstk__fcstmonth_div__c</columns>
        <columns>rstk__fcstmonth_icitem__c</columns>
        <columns>rstk__fcstmonth_month__c</columns>
        <columns>rstk__fcstmonth_qty__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstk__fcstmonth_tslqty__c</columns>
        <columns>rstk__fcstmonth_procseq__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstk__fcstmonth_icitem__c</field>
            <operation>contains</operation>
            <value>0351</value>
        </filters>
        <label>Monlhly Forecasts</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Consolidated Monthly Forecasts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>rstk__Division_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>ISNULL(rstk__fcstmonth_div__c)</errorConditionFormula>
        <errorMessage>Division is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Item_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>ISNULL( rstk__fcstmonth_icitem__c )</errorConditionFormula>
        <errorMessage>Inventory Item is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Month_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>ISNULL( rstk__fcstmonth_month__c )</errorConditionFormula>
        <errorMessage>Forecast Month is required</errorMessage>
    </validationRules>
</CustomObject>